// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Publication Details Component  Renders full mount 1`] = `<div />`;

exports[`Publication Details Component  Renders nothing for no display type lookup 1`] = `<div />`;

exports[`Publication Details Component  Renders the Type & Collection title for collections with multiple communities 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
      data-testid="standard-card-type-&-community"
      id="standard-card-type-&-community"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
    >
      <div
        class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
        >
          <h3
            class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
            data-testid="standard-card-type-&-community-header"
            id="standard-card-type-&-community-header"
          >
            Type & Community
          </h3>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
        data-analyticsid="standard-card-type-&-community-content"
        data-testid="standard-card-type-&-community-content"
        id="standard-card-type-&-community-content"
      >
        <div
          class="MuiBox-root css-fvwuew"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-8bh1x2-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-3 css-1cixae8-MuiGrid-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-display-type-label"
              >
                Type of work
              </span>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-9 css-xjoeqo-MuiGrid-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-display-type"
              >
                Collection
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-fvwuew"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-8bh1x2-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-3 css-1cixae8-MuiGrid-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-content-indicator-label"
              >
                Content Indicators
              </span>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-9 css-xjoeqo-MuiGrid-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-content-indicator"
              >
                <span
                  class="MuiBox-root css-1njruhw"
                  data-analyticsid="rek-content-indicator-0"
                  data-testid="rek-content-indicator-0"
                >
                  Scholarship of Teaching and Learning
                </span>
                <span
                  class="MuiBox-root css-1njruhw"
                  data-analyticsid="rek-content-indicator-1"
                  data-testid="rek-content-indicator-1"
                >
                  Protocol
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-fvwuew"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-8bh1x2-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-3 css-1cixae8-MuiGrid-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-ismemberof-label"
              >
                Communities
              </span>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-9 css-xjoeqo-MuiGrid-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-ismemberof"
              >
                <ul
                  class="MuiBox-root css-csbpup"
                >
                  <li
                    data-analyticsid="rek-ismemberof-0"
                    data-testid="rek-ismemberof-0"
                  >
                    <a
                      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5Bvalue%5D%5B%5D=UQ%3A289097&searchMode=advanced"
                    >
                      Research Data Collections
                    </a>
                  </li>
                  <li
                    data-analyticsid="rek-ismemberof-1"
                    data-testid="rek-ismemberof-1"
                  >
                    <a
                      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5Bvalue%5D%5B%5D=UQ%3A3825&searchMode=advanced"
                    >
                      School of Chemistry and Molecular Biosciences
                    </a>
                  </li>
                </ul>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Publication Details Component  Renders the Type & Collection title for collections with one community 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
      data-testid="standard-card-type-&-community"
      id="standard-card-type-&-community"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
    >
      <div
        class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
        >
          <h3
            class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
            data-testid="standard-card-type-&-community-header"
            id="standard-card-type-&-community-header"
          >
            Type & Community
          </h3>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
        data-analyticsid="standard-card-type-&-community-content"
        data-testid="standard-card-type-&-community-content"
        id="standard-card-type-&-community-content"
      >
        <div
          class="MuiBox-root css-fvwuew"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-8bh1x2-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-3 css-1cixae8-MuiGrid-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-display-type-label"
              >
                Type of work
              </span>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-9 css-xjoeqo-MuiGrid-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-display-type"
              >
                Collection
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-fvwuew"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-8bh1x2-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-3 css-1cixae8-MuiGrid-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-content-indicator-label"
              >
                Content Indicators
              </span>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-9 css-xjoeqo-MuiGrid-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-content-indicator"
              >
                <span
                  class="MuiBox-root css-1njruhw"
                  data-analyticsid="rek-content-indicator-0"
                  data-testid="rek-content-indicator-0"
                >
                  Scholarship of Teaching and Learning
                </span>
                <span
                  class="MuiBox-root css-1njruhw"
                  data-analyticsid="rek-content-indicator-1"
                  data-testid="rek-content-indicator-1"
                >
                  Protocol
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-fvwuew"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-8bh1x2-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-3 css-1cixae8-MuiGrid-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-ismemberof-label"
              >
                Community
              </span>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-9 css-xjoeqo-MuiGrid-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-ismemberof"
              >
                <ul
                  class="MuiBox-root css-csbpup"
                >
                  <li
                    data-analyticsid="rek-ismemberof-0"
                    data-testid="rek-ismemberof-0"
                  >
                    <a
                      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5Bvalue%5D%5B%5D=UQ%3A289097&searchMode=advanced"
                    >
                      Research Data Collections
                    </a>
                  </li>
                </ul>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Publication Details Component  Renders the Type title for Communities 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
      data-testid="standard-card-type"
      id="standard-card-type"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
    >
      <div
        class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
        >
          <h3
            class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
            data-testid="standard-card-type-header"
            id="standard-card-type-header"
          >
            Type
          </h3>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
        data-analyticsid="standard-card-type-content"
        data-testid="standard-card-type-content"
        id="standard-card-type-content"
      >
        <div
          class="MuiBox-root css-fvwuew"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-8bh1x2-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-3 css-1cixae8-MuiGrid-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-display-type-label"
              >
                Type of work
              </span>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-9 css-xjoeqo-MuiGrid-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-display-type"
              >
                Community
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-fvwuew"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-8bh1x2-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-3 css-1cixae8-MuiGrid-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-content-indicator-label"
              >
                Content Indicators
              </span>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-9 css-xjoeqo-MuiGrid-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-content-indicator"
              >
                <span
                  class="MuiBox-root css-1njruhw"
                  data-analyticsid="rek-content-indicator-0"
                  data-testid="rek-content-indicator-0"
                >
                  Scholarship of Teaching and Learning
                </span>
                <span
                  class="MuiBox-root css-1njruhw"
                  data-analyticsid="rek-content-indicator-1"
                  data-testid="rek-content-indicator-1"
                >
                  Protocol
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Publication Details Component  should not render component with empty publication 1`] = `<div />`;

exports[`Publication Details Component  should render component 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
      data-testid="standard-card-type-&-collection"
      id="standard-card-type-&-collection"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
    >
      <div
        class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
        >
          <h3
            class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
            data-testid="standard-card-type-&-collection-header"
            id="standard-card-type-&-collection-header"
          >
            Type & Collection
          </h3>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
        data-analyticsid="standard-card-type-&-collection-content"
        data-testid="standard-card-type-&-collection-content"
        id="standard-card-type-&-collection-content"
      >
        <div
          class="MuiBox-root css-fvwuew"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-8bh1x2-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-3 css-1cixae8-MuiGrid-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-display-type-label"
              >
                Type of work
              </span>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-9 css-xjoeqo-MuiGrid-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-display-type"
              >
                Journal Article
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-fvwuew"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-8bh1x2-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-3 css-1cixae8-MuiGrid-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-subtype-label"
              >
                Sub-type
              </span>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-9 css-xjoeqo-MuiGrid-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-subtype"
              >
                Article (original research)
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-fvwuew"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-8bh1x2-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-3 css-1cixae8-MuiGrid-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-content-indicator-label"
              >
                Content Indicators
              </span>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-9 css-xjoeqo-MuiGrid-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-content-indicator"
              >
                <span
                  class="MuiBox-root css-1njruhw"
                  data-analyticsid="rek-content-indicator-0"
                  data-testid="rek-content-indicator-0"
                >
                  Scholarship of Teaching and Learning
                </span>
                <span
                  class="MuiBox-root css-1njruhw"
                  data-analyticsid="rek-content-indicator-1"
                  data-testid="rek-content-indicator-1"
                >
                  Protocol
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-fvwuew"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-8bh1x2-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-3 css-1cixae8-MuiGrid-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-ismemberof-label"
              >
                Collections
              </span>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-9 css-xjoeqo-MuiGrid-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-ismemberof"
              >
                <ul
                  class="MuiBox-root css-csbpup"
                >
                  <li
                    data-analyticsid="rek-ismemberof-0"
                    data-testid="rek-ismemberof-0"
                  >
                    <a
                      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5Bvalue%5D%5B%5D=UQ%3A3825&searchMode=advanced"
                    >
                      School of Chemistry and Molecular Biosciences
                    </a>
                  </li>
                  <li
                    data-analyticsid="rek-ismemberof-1"
                    data-testid="rek-ismemberof-1"
                  >
                    <a
                      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5Bvalue%5D%5B%5D=UQ%3A218311&searchMode=advanced"
                    >
                      HERDC Pre-Audit
                    </a>
                  </li>
                  <li
                    data-analyticsid="rek-ismemberof-2"
                    data-testid="rek-ismemberof-2"
                  >
                    <a
                      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5Bvalue%5D%5B%5D=UQ%3A171723&searchMode=advanced"
                    >
                      UQ Centre for Clinical Research Publications
                    </a>
                  </li>
                  <li
                    data-analyticsid="rek-ismemberof-3"
                    data-testid="rek-ismemberof-3"
                  >
                    <a
                      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5Bvalue%5D%5B%5D=UQ%3A3858&searchMode=advanced"
                    >
                      Institute for Molecular Bioscience - Publications
                    </a>
                  </li>
                  <li
                    data-analyticsid="rek-ismemberof-4"
                    data-testid="rek-ismemberof-4"
                  >
                    <a
                      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5Bvalue%5D%5B%5D=UQ%3A3860&searchMode=advanced"
                    >
                      Australian Institute for Bioengineering and Nanotechnology Publications
                    </a>
                  </li>
                  <li
                    data-analyticsid="rek-ismemberof-5"
                    data-testid="rek-ismemberof-5"
                  >
                    <a
                      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5Bvalue%5D%5B%5D=UQ%3A3831&searchMode=advanced"
                    >
                      School of Medicine Publications
                    </a>
                  </li>
                </ul>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Publication Details Component  should render with publication without collection data 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
      data-testid="standard-card-type-&-collection"
      id="standard-card-type-&-collection"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
    >
      <div
        class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
        >
          <h3
            class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
            data-testid="standard-card-type-&-collection-header"
            id="standard-card-type-&-collection-header"
          >
            Type & Collection
          </h3>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
        data-analyticsid="standard-card-type-&-collection-content"
        data-testid="standard-card-type-&-collection-content"
        id="standard-card-type-&-collection-content"
      >
        <div
          class="MuiBox-root css-fvwuew"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-8bh1x2-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-3 css-1cixae8-MuiGrid-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-display-type-label"
              >
                Type of work
              </span>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-9 css-xjoeqo-MuiGrid-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-display-type"
              >
                Journal Article
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-fvwuew"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-8bh1x2-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-3 css-1cixae8-MuiGrid-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-content-indicator-label"
              >
                Content Indicators
              </span>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-9 css-xjoeqo-MuiGrid-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-content-indicator"
              >
                <span
                  class="MuiBox-root css-1njruhw"
                  data-analyticsid="rek-content-indicator-0"
                  data-testid="rek-content-indicator-0"
                >
                  Scholarship of Teaching and Learning
                </span>
                <span
                  class="MuiBox-root css-1njruhw"
                  data-analyticsid="rek-content-indicator-1"
                  data-testid="rek-content-indicator-1"
                >
                  Protocol
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Publication Details Component  should render with publication without subtype data 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
      data-testid="standard-card-type-&-collection"
      id="standard-card-type-&-collection"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
    >
      <div
        class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
        >
          <h3
            class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
            data-testid="standard-card-type-&-collection-header"
            id="standard-card-type-&-collection-header"
          >
            Type & Collection
          </h3>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
        data-analyticsid="standard-card-type-&-collection-content"
        data-testid="standard-card-type-&-collection-content"
        id="standard-card-type-&-collection-content"
      >
        <div
          class="MuiBox-root css-fvwuew"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-8bh1x2-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-3 css-1cixae8-MuiGrid-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-display-type-label"
              >
                Type of work
              </span>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-9 css-xjoeqo-MuiGrid-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-display-type"
              >
                Journal Article
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-fvwuew"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-8bh1x2-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-3 css-1cixae8-MuiGrid-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-content-indicator-label"
              >
                Content Indicators
              </span>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-9 css-xjoeqo-MuiGrid-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-content-indicator"
              >
                <span
                  class="MuiBox-root css-1njruhw"
                  data-analyticsid="rek-content-indicator-0"
                  data-testid="rek-content-indicator-0"
                >
                  Scholarship of Teaching and Learning
                </span>
                <span
                  class="MuiBox-root css-1njruhw"
                  data-analyticsid="rek-content-indicator-1"
                  data-testid="rek-content-indicator-1"
                >
                  Protocol
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-fvwuew"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-8bh1x2-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-3 css-1cixae8-MuiGrid-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-ismemberof-label"
              >
                Collections
              </span>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-9 css-xjoeqo-MuiGrid-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-ismemberof"
              >
                <ul
                  class="MuiBox-root css-csbpup"
                >
                  <li
                    data-analyticsid="rek-ismemberof-0"
                    data-testid="rek-ismemberof-0"
                  >
                    <a
                      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5Bvalue%5D%5B%5D=UQ%3A3825&searchMode=advanced"
                    >
                      School of Chemistry and Molecular Biosciences
                    </a>
                  </li>
                  <li
                    data-analyticsid="rek-ismemberof-1"
                    data-testid="rek-ismemberof-1"
                  >
                    <a
                      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5Bvalue%5D%5B%5D=UQ%3A218311&searchMode=advanced"
                    >
                      HERDC Pre-Audit
                    </a>
                  </li>
                  <li
                    data-analyticsid="rek-ismemberof-2"
                    data-testid="rek-ismemberof-2"
                  >
                    <a
                      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5Bvalue%5D%5B%5D=UQ%3A171723&searchMode=advanced"
                    >
                      UQ Centre for Clinical Research Publications
                    </a>
                  </li>
                  <li
                    data-analyticsid="rek-ismemberof-3"
                    data-testid="rek-ismemberof-3"
                  >
                    <a
                      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5Bvalue%5D%5B%5D=UQ%3A3858&searchMode=advanced"
                    >
                      Institute for Molecular Bioscience - Publications
                    </a>
                  </li>
                  <li
                    data-analyticsid="rek-ismemberof-4"
                    data-testid="rek-ismemberof-4"
                  >
                    <a
                      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5Bvalue%5D%5B%5D=UQ%3A3860&searchMode=advanced"
                    >
                      Australian Institute for Bioengineering and Nanotechnology Publications
                    </a>
                  </li>
                  <li
                    data-analyticsid="rek-ismemberof-5"
                    data-testid="rek-ismemberof-5"
                  >
                    <a
                      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5Bvalue%5D%5B%5D=UQ%3A3831&searchMode=advanced"
                    >
                      School of Medicine Publications
                    </a>
                  </li>
                </ul>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
